# html2text_rs

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
html2text_rs/: html2text_rs.pyi
python/html2text_rs/: __init__.py
python/tests/: test_html2text_rs.py
src/: lib.rs
tests/: test_html2text_rs.py
