[package]
name = "html2text_rs"
version = "0.2.3"
edition = "2021"
description = "Convert HTML to markdown or plain text"
authors = ["deedy5"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "html2text_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
html2text = "0.14.2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
