[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "html2text_rs"
description = "Convert HTML to markdown or plain text"
keywords = [
    "python", "html2text", "html-to-text", "html-to-markdown", "html2md", "markdown"
]
authors = [
  {name = "deedy5"}
]
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dynamic = ["version"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
